# GTFOHax

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  injector.cpp  mingw-toolchain.cmake  vcpkg.json
.github/workflows/: windows-build.yml
GTFOHax/: GTFOHax.vcxproj  GTFOHax.vcxproj.filters  InputUtil.cpp  globals.h  hooks.cpp  i18n.cpp  i18n.h  menu.cpp  ui.cpp  ui.h
GTFOHax/appdata/gcc/: il2cpp-api-functions.h
GTFOHax/config/: config.cpp
GTFOHax/framework/: dllmain.cpp  helpers.cpp  helpers.h  il2cpp-appdata.h
GTFOHax/hacks/: aimbot.cpp  aimbot.h  enemy.cpp  enemy.h  esp.cpp  esp.h  player.cpp  player.h
GTFOHax/user/: main.cpp
GTFOHax/utils/: math.cpp
kiero/: kiero.cpp
kiero/examples/imgui/: main.cpp
kiero/examples/imgui/impl/: win32_impl.cpp
kiero/minhook/: CMakeLists.txt
rust/gtfohax/: Cargo.toml
rust/gtfohax-ui/: Cargo.toml  tauri.conf.json
rust/gtfohax-ui/src/: main.rs
rust/gtfohax/src/: lib.rs
scripts/: gdb_load_symbols.py  process_crash_stack.py
